--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
 asgiref==3.8.1
+boto3==1.34.103
+botocore==1.34.103
 Django==5.0.4
+django-storages==1.14.3
 Faker==25.0.1
+jmespath==1.0.1
+mysqlclient==2.2.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+s3transfer==0.10.1
 six==1.16.0
 sqlparse==0.5.0
 typing_extensions==4.11.0
 tzdata==2024.1
+urllib3==2.2.1
